--- a/aws_vpc_infoblox/defaults/main.yml
+++ b/aws_vpc_infoblox/defaults/main.yml
@@ -38,7 +38,7 @@ vpcs:
         cidr_ip: 0.0.0.0/0
         rule_desc: Allow all ICMP
     # AMI Infoblox
-    infoblox_image_name: Infoblox NIOS 8.6.3 for DDI-86a90f05-2b29-46c8-9fe0-e9a450b73bdb
+    ec2_image_name: Infoblox NIOS 8.6.3 for DDI-86a90f05-2b29-46c8-9fe0-e9a450b73bdb
     # Flavour Infoblox
     ec2_flavor_name: m5.large
     # Key Pair Infoblox
