--- a/aws_vpc_infoblox/defaults/main.yml
+++ b/aws_vpc_infoblox/defaults/main.yml
@@ -41,9 +41,9 @@ vpcs:
     #ec2_image_name: Infoblox NIOS 8.6.3 for DDI-86a90f05-2b29-46c8-9fe0-e9a450b73bdb
     ec2_image_name: RHEL-8.6.0_HVM-*x86_64*
     # Flavour Infoblox
-    ec2_flavor_name: m5.large
+    #ec2_flavor_name: m5.large
     #ec2_flavor_name: m5.xlarge
-    #ec2_flavor_name: i3.large
+    ec2_flavor_name: i3.large
     # Key Pair Infoblox
     ec2_key_name: "KeyPair-Virginia"
     # Instance Name Infoblox
