--- a/aws_vpc_infoblox_delete/tasks/main.yml
+++ b/aws_vpc_infoblox_delete/tasks/main.yml
@@ -1,6 +1,142 @@
 ---
 
-- name: Loop for VPCs deletion
-  include_tasks: main_loop_vpcs.yml
-  loop: "{{ vpcs | dict2items }}"
+- name: Query VPCs
+  amazon.aws.ec2_vpc_net_info:
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_vpc_name }}"
+  register: vpc
+
+- name: Query Subnet default
+  amazon.aws.ec2_vpc_subnet_info:
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_subnet_name }}"
+  register: subnet
+
+- name: Query Subnet 1
+  amazon.aws.ec2_vpc_subnet_info:
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_subnet_name1 }}"
+  register: subnet1
+
+- name: Query Subnet 2
+  amazon.aws.ec2_vpc_subnet_info:
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_subnet_name2 }}"
+  register: subnet2
+
+- name: Query ENI 1
+  amazon.aws.ec2_eni_info:
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_eni_name1 }}"
+  register: eni1
+
+- name: Query ENI 2
+  amazon.aws.ec2_eni_info:
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_eni_name2 }}"
+  register: eni2
+
+- name: Query Route Tables
+  amazon.aws.ec2_vpc_route_table_info:
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_rt_name }}"
+  register: rtb
+
+- name: Terminate FortiGate instance
+  amazon.aws.ec2_instance:
+    state: absent
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_fgt_instance_name }}"
+
+- name: Terminate FortiAnalyzer instance
+  amazon.aws.ec2_instance:
+    state: absent
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_faz_instance_name }}"
+
+- name: Terminate FortiManager instance
+  amazon.aws.ec2_instance:
+    state: absent
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_fmg_instance_name }}"
+
+- name: Delete Security Group
+  amazon.aws.ec2_group:
+    name: "{{ ec2_sg_name }}"
+    region: "{{ ec2_vpc_region }}"
+    state: absent
+
+- name: Delete ENI 1
+  amazon.aws.ec2_eni:
+    name: "{{ ec2_eni_name1 }}"
+    subnet_id: "{{ subnet1.subnets[0].subnet_id }}"
+    region: "{{ ec2_vpc_region }}"
+    state: absent
+  when: subnet1.subnets | length > 0
+
+- name: Delete ENI 2
+  amazon.aws.ec2_eni:
+    name: "{{ ec2_eni_name2 }}"
+    subnet_id: "{{ subnet2.subnets[0].subnet_id }}"
+    region: "{{ ec2_vpc_region }}"
+    state: absent
+  when: subnet2.subnets | length > 0
+
+- name: Delete Subnet default in VPC
+  amazon.aws.ec2_vpc_subnet:
+    vpc_id: "{{ vpc.vpcs[0].id }}"
+    cidr: "{{ subnet.subnets[0].cidr_block }}"
+    region: "{{ ec2_vpc_region }}"
+    state: absent
+  when: vpc.vpcs | length > 0 and subnet.subnets | length > 0
+
+- name: Delete Subnet 1 in VPC
+  amazon.aws.ec2_vpc_subnet:
+    vpc_id: "{{ vpc.vpcs[0].id }}"
+    cidr: "{{ subnet1.subnets[0].cidr_block }}"
+    region: "{{ ec2_vpc_region }}"
+    state: absent
+  when: vpc.vpcs | length > 0 and subnet1.subnets | length > 0
+
+- name: Delete Subnet 2 in VPC
+  amazon.aws.ec2_vpc_subnet:
+    vpc_id: "{{ vpc.vpcs[0].id }}"
+    cidr: "{{ subnet2.subnets[0].cidr_block }}"
+    region: "{{ ec2_vpc_region }}"
+    state: absent
+  when: vpc.vpcs | length > 0 and subnet2.subnets | length > 0
+
+- name: Delete Route Table
+  amazon.aws.ec2_vpc_route_table:
+    vpc_id: "{{ vpc.vpcs[0].id }}"
+    region: "{{ ec2_vpc_region }}"
+    route_table_id: "{{ rtb.route_tables[0].id }}"
+    lookup: id
+    state: absent
+  when: vpc.vpcs | length > 0 and rtb.route_tables | length > 0
+
+- name: Delete Internet Gateway (IGW)
+  amazon.aws.ec2_vpc_igw:
+    vpc_id: "{{ vpc.vpcs[0].id }}"
+    region: "{{ ec2_vpc_region }}"
+    state: absent
+  when: vpc.vpcs | length > 0
+
+- name: Delete VPC
+  amazon.aws.ec2_vpc_net:
+    name: "{{ ec2_vpc_name }}"
+    region: "{{ ec2_vpc_region }}"
+    cidr_block: "{{ vpc.vpcs[0].cidr_block }}"
+    state: absent
+  when: vpc.vpcs | length > 0
 
