--- a/roles/aws_deploy_infoblox/defaults/main.yml
+++ b/roles/aws_deploy_infoblox/defaults/main.yml
@@ -32,5 +32,5 @@ ec2_sg_openports:
 ec2_infoblox_instance_name: infoblox-1
 ec2_infoblox_image_id: ami-0622a3d7a285429de
 ec2_infoblox_image_name: Infoblox NIOS 9.0.5(BYOL)-3d6f2259-6756-484c-ac5e-f2d9330afe95
-ec2_infoblox_flavor_name: c6i.xlarge
+ec2_infoblox_flavor_name: m5.large
 ec2_infoblox_keypair_name: "KeyPair-Virginia"
