--- a/roles/aws_infoblox_undeploy/tasks/main.yml
+++ b/roles/aws_infoblox_undeploy/tasks/main.yml
@@ -7,40 +7,26 @@
       "tag:Name": "{{ ec2_vpc_name }}"
   register: vpc
 
-- name: Query Subnet default
+- name: Query Subnet SRV
   amazon.aws.ec2_vpc_subnet_info:
     region: "{{ ec2_vpc_region }}"
     filters:
-      "tag:Name": "{{ ec2_subnet_name }}"
-  register: subnet
+      "tag:Name": "{{ ec2_subnet_name_srv }}"
+  register: subnet_srv
 
-- name: Query Subnet 1
+- name: Query Subnet MGMT
   amazon.aws.ec2_vpc_subnet_info:
     region: "{{ ec2_vpc_region }}"
     filters:
-      "tag:Name": "{{ ec2_subnet_name1 }}"
-  register: subnet1
-
-- name: Query Subnet 2
-  amazon.aws.ec2_vpc_subnet_info:
-    region: "{{ ec2_vpc_region }}"
-    filters:
-      "tag:Name": "{{ ec2_subnet_name2 }}"
-  register: subnet2
+      "tag:Name": "{{ ec2_subnet_name_mgmt }}"
+  register: subnet_mgmt
 
 - name: Query ENI 1
   amazon.aws.ec2_eni_info:
     region: "{{ ec2_vpc_region }}"
     filters:
-      "tag:Name": "{{ ec2_eni_name1 }}"
-  register: eni1
-
-- name: Query ENI 2
-  amazon.aws.ec2_eni_info:
-    region: "{{ ec2_vpc_region }}"
-    filters:
-      "tag:Name": "{{ ec2_eni_name2 }}"
-  register: eni2
+      "tag:Name": "{{ ec2_eni_name_mgmt }}"
+  register: eni_mgmt
 
 - name: Query Route Tables
   amazon.aws.ec2_vpc_route_table_info:
@@ -49,26 +35,12 @@
       "tag:Name": "{{ ec2_rt_name }}"
   register: rtb
 
-- name: Terminate FortiGate instance
+- name: Terminate Infoblox instance
   amazon.aws.ec2_instance:
-    state: absent
     region: "{{ ec2_vpc_region }}"
     filters:
-      "tag:Name": "{{ ec2_fgt_instance_name }}"
-
-- name: Terminate FortiAnalyzer instance
-  amazon.aws.ec2_instance:
+      "tag:Name": "{{ ec2_infoblox_instance_name }}"
     state: absent
-    region: "{{ ec2_vpc_region }}"
-    filters:
-      "tag:Name": "{{ ec2_faz_instance_name }}"
-
-- name: Terminate FortiManager instance
-  amazon.aws.ec2_instance:
-    state: absent
-    region: "{{ ec2_vpc_region }}"
-    filters:
-      "tag:Name": "{{ ec2_fmg_instance_name }}"
 
 - name: Delete Security Group
   amazon.aws.ec2_group:
@@ -76,45 +48,37 @@
     region: "{{ ec2_vpc_region }}"
     state: absent
 
-- name: Delete ENI 1
+- name: Delete ENI MGMT
   amazon.aws.ec2_eni:
-    name: "{{ ec2_eni_name1 }}"
-    subnet_id: "{{ subnet1.subnets[0].subnet_id }}"
+    name: "{{ ec2_eni_name_mgmt }}"
+    subnet_id: "{{ subnet_mgmt.subnets[0].subnet_id }}"
     region: "{{ ec2_vpc_region }}"
     state: absent
-  when: subnet1.subnets | length > 0
-
-- name: Delete ENI 2
-  amazon.aws.ec2_eni:
-    name: "{{ ec2_eni_name2 }}"
-    subnet_id: "{{ subnet2.subnets[0].subnet_id }}"
-    region: "{{ ec2_vpc_region }}"
-    state: absent
-  when: subnet2.subnets | length > 0
+  when: subnet_mgmt.subnets | length > 0
 
 - name: Delete Subnet default in VPC
   amazon.aws.ec2_vpc_subnet:
     vpc_id: "{{ vpc.vpcs[0].id }}"
-    cidr: "{{ subnet.subnets[0].cidr_block }}"
+    cidr: "{{ subnet_mgmt.subnets[0].cidr_block }}"
     region: "{{ ec2_vpc_region }}"
     state: absent
-  when: vpc.vpcs | length > 0 and subnet.subnets | length > 0
+  when: vpc.vpcs | length > 0 and subnet_mgmt.subnets | length > 0
 
-- name: Delete Subnet 1 in VPC
+- name: Delete Subnet SRV in VPC
   amazon.aws.ec2_vpc_subnet:
     vpc_id: "{{ vpc.vpcs[0].id }}"
-    cidr: "{{ subnet1.subnets[0].cidr_block }}"
+    cidr: "{{ subnet_srv.subnets[0].cidr_block }}"
     region: "{{ ec2_vpc_region }}"
     state: absent
-  when: vpc.vpcs | length > 0 and subnet1.subnets | length > 0
+  when: vpc.vpcs | length > 0 and subnet_srv.subnets | length > 0
 
-- name: Delete Subnet 2 in VPC
+- name: Delete Subnet MGMT in VPC
   amazon.aws.ec2_vpc_subnet:
     vpc_id: "{{ vpc.vpcs[0].id }}"
-    cidr: "{{ subnet2.subnets[0].cidr_block }}"
+    cidr: "{{ subnet_mgmt.subnets[0].cidr_block }}"
     region: "{{ ec2_vpc_region }}"
     state: absent
-  when: vpc.vpcs | length > 0 and subnet2.subnets | length > 0
+  when: vpc.vpcs | length > 0 and subnet_mgmt.subnets | length > 0
 
 - name: Delete Route Table
   amazon.aws.ec2_vpc_route_table:
