--- a/roles/aws_infoblox_undeploy/tasks/main.yml
+++ b/roles/aws_infoblox_undeploy/tasks/main.yml
@@ -31,7 +31,7 @@
 - name: Dellocate a new Elastic IP to ENI MGMT
   amazon.aws.ec2_eip:
     region: "{{ ec2_vpc_region }}"
-    device_id: eni_mgmt.interface.id
+    device_id: "{{ eni_mgmt.interface.id }}"
     in_vpc: true
     state: absent
   register: eip_mgmt
