--- a/roles/aws_infoblox_deploy/tasks/main.yml
+++ b/roles/aws_infoblox_deploy/tasks/main.yml
@@ -101,6 +101,7 @@
     instance_id: "{{ ec2_infoblox_instance.instances[0].instance_id }}"
     device_index: 1
     subnet_id: "{{ subnet_mgmt.subnet.id }}"
+    security_groups: "{{ ec2_sg_name }}"
     delete_on_termination: true
     attached: true
     state: present
