--- a/roles/aws_infoblox_undeploy/tasks/main.yml
+++ b/roles/aws_infoblox_undeploy/tasks/main.yml
@@ -14,6 +14,13 @@
       "tag:Name": "{{ ec2_subnet_name_srv }}"
   register: subnet_srv
 
+- name: Query Subnet MGMT
+  amazon.aws.ec2_vpc_subnet_info:
+    region: "{{ ec2_vpc_region }}"
+    filters:
+      "tag:Name": "{{ ec2_subnet_name_mgmt }}"
+  register: subnet_mgmt
+
 - name: Query ENI MGMT
   amazon.aws.ec2_eni_info:
     region: "{{ ec2_vpc_region }}"
@@ -59,7 +66,6 @@
     region: "{{ ec2_vpc_region }}"
     state: absent
   when: subnet_mgmt.subnets | length > 0
-  ignore errors: true
 
 - name: Delete Subnet SRV in VPC
   amazon.aws.ec2_vpc_subnet:
