--- a/roles/aws_infoblox_deploy/tasks/main.yml
+++ b/roles/aws_infoblox_deploy/tasks/main.yml
@@ -82,7 +82,7 @@
   amazon.aws.ec2_instance:
     image_id: "{{ ami_infoblox_find.images[-1].image_id | default('') }}"
     instance_type: "{{ ec2_infoblox_flavor_name }}"
-    security_group: "{{ ec2_sg_name }}"
+    #security_group: "{{ ec2_sg_name }}"
     name: "{{ ec2_infoblox_instance_name }}"
     key_name: "{{ ec2_infoblox_keypair_name }}"
     region: "{{ ec2_vpc_region }}"
