--- a/roles/aws_infoblox_deploy/tasks/main.yml
+++ b/roles/aws_infoblox_deploy/tasks/main.yml
@@ -78,53 +78,56 @@
     region: "{{ ec2_vpc_region }}"
   register: ami_infoblox_find
 
-- name: Create Infoblox instance
-  amazon.aws.ec2_instance:
-    image_id: "{{ ami_infoblox_find.images[-1].image_id | default('') }}"
-    instance_type: "{{ ec2_infoblox_flavor_name }}"
-    #security_group: "{{ ec2_sg_name }}"
-    name: "{{ ec2_infoblox_instance_name }}"
-    key_name: "{{ ec2_infoblox_keypair_name }}"
-    region: "{{ ec2_vpc_region }}"
-    vpc_subnet_id: "{{ subnet_srv.subnet.id }}"
-    network_interfaces_ids: []
-    # network:
-    #   assign_public_ip: true
-    user_data: "{{ ec2_infoblox_user_data }}"
-    tags:
-      Name: "{{ ec2_infoblox_instance_name }}"
-    state: running
-  register: ec2_infoblox_instance
-
-- name: Create and Attach ENI SRV
+- name: Create ENI SRV
   amazon.aws.ec2_eni:
     name: "{{ ec2_eni_name_srv }}"
     region: "{{ ec2_vpc_region }}"
-    instance_id: "{{ ec2_infoblox_instance.instances[0].instance_id }}"
-    device_index: 1
+    #instance_id: "{{ ec2_infoblox_instance.instances[0].instance_id }}"
+    device_index: 0
     subnet_id: "{{ subnet_srv.subnet.id }}"
     security_groups: "{{ ec2_sg_name }}"
     delete_on_termination: true
-    attached: true
+    #attached: true
+    attached: false
     tags:
       Name: "{{ ec2_eni_name_srv }}"
     state: present
   register: eni_mgmt
 
-- name: Create and Attach ENI MGMT
+- name: Create ENI MGMT
   amazon.aws.ec2_eni:
     name: "{{ ec2_eni_name_mgmt }}"
     region: "{{ ec2_vpc_region }}"
-    instance_id: "{{ ec2_infoblox_instance.instances[0].instance_id }}"
+    #instance_id: "{{ ec2_infoblox_instance.instances[0].instance_id }}"
     device_index: 2
     subnet_id: "{{ subnet_mgmt.subnet.id }}"
     security_groups: "{{ ec2_sg_name }}"
     delete_on_termination: true
-    attached: true
+    #attached: true
+    attached: false
     tags:
       Name: "{{ ec2_eni_name_mgmt }}"
     state: present
   register: eni_mgmt
+
+- name: Create Infoblox instance
+  amazon.aws.ec2_instance:
+    image_id: "{{ ami_infoblox_find.images[-1].image_id | default('') }}"
+    instance_type: "{{ ec2_infoblox_flavor_name }}"
+    name: "{{ ec2_infoblox_instance_name }}"
+    key_name: "{{ ec2_infoblox_keypair_name }}"
+    region: "{{ ec2_vpc_region }}"
+    vpc_subnet_id: "{{ subnet_srv.subnet.id }}"
+    network_interfaces_ids:
+      - id: "{{ eni_srv.interface.id }}"
+        device_index: 0
+      - id: "{{ eni_mgmt.interface.id }}"
+        device_index: 1
+    user_data: "{{ ec2_infoblox_user_data }}"
+    tags:
+      Name: "{{ ec2_infoblox_instance_name }}"
+    state: running
+  register: ec2_infoblox_instance
 
 - name: Allocate a new Elastic IP to ENI MGMT
   amazon.aws.ec2_eip:
