--- a/roles/aws_infoblox_deploy/tasks/main.yml
+++ b/roles/aws_infoblox_deploy/tasks/main.yml
@@ -124,6 +124,17 @@
       - id: "{{ eni_mgmt.interface.id }}"
         device_index: 1
     user_data: "{{ ec2_infoblox_user_data }}"
+    volumes:
+      - device_name: /dev/sda1
+        ebs:
+          volume_type: gp3
+          volume_size: 500
+          delete_on_termination: true
+      - device_name: /dev/sdb
+        ebs:
+          volume_type: gp3
+          volume_size: 500
+          delete_on_termination: true
     tags:
       Name: "{{ ec2_infoblox_instance_name }}"
     state: running
