--- a/roles/aws_infoblox_undeploy/tasks/main.yml
+++ b/roles/aws_infoblox_undeploy/tasks/main.yml
@@ -35,14 +35,14 @@
       "tag:Name": "{{ ec2_rt_name }}"
   register: rtb
 
-- name: Dellocate Elastic IP in ENI MGMT
+- name: Dellocate Elastic IP in ENI SRV
   amazon.aws.ec2_eip:
     region: "{{ ec2_vpc_region }}"
-    device_id: "{{ eni_mgmt.network_interfaces[0].network_interface_id }}"
+    device_id: "{{ eni_srv.network_interfaces[0].network_interface_id }}"
     in_vpc: true
     state: absent
     release_on_disassociation: true
-  register: eip_mgmt
+  register: eip_srv
 
 - name: Terminate Infoblox instance
   amazon.aws.ec2_instance:
