--- a/roles/aws_infoblox_deploy/tasks/main copy.yml
+++ b/roles/aws_infoblox_deploy/tasks/main copy.yml
@@ -78,18 +78,18 @@
     region: "{{ ec2_vpc_region }}"
   register: ami_infoblox_find
 
-# - name: Create ENI MGMT
-#   amazon.aws.ec2_eni:
-#     name: "{{ ec2_eni_name_mgmt }}"
-#     region: "{{ ec2_vpc_region }}"
-#     subnet_id: "{{ subnet_mgmt.subnet.id }}"
-#     security_groups: "{{ ec2_sg_name }}"
-#     delete_on_termination: true
-#     attached: false
-#     tags:
-#       Name: "{{ ec2_eni_name_mgmt }}"
-#     state: present
-#   register: eni_mgmt
+- name: Create ENI MGMT
+  amazon.aws.ec2_eni:
+    name: "{{ ec2_eni_name_mgmt }}"
+    region: "{{ ec2_vpc_region }}"
+    subnet_id: "{{ subnet_mgmt.subnet.id }}"
+    security_groups: "{{ ec2_sg_name }}"
+    delete_on_termination: true
+    attached: false
+    tags:
+      Name: "{{ ec2_eni_name_mgmt }}"
+    state: present
+  register: eni_mgmt
 
 - name: Create ENI SRV
   amazon.aws.ec2_eni:
@@ -113,8 +113,8 @@
     vpc_subnet_id: "{{ subnet_srv.subnet.id }}"
     key_name: "{{ ec2_infoblox_keypair_name }}"
     network_interfaces_ids:
-      # - id: "{{ eni_mgmt.interface.id }}"
-      #   device_index: 0
+      - id: "{{ eni_mgmt.interface.id }}"
+        device_index: 0
       - id: "{{ eni_srv.interface.id }}"
         device_index: 1
     user_data: "{{ ec2_infoblox_user_data }}"
