--- a/roles/aws_infoblox_deploy/defaults/main.yml
+++ b/roles/aws_infoblox_deploy/defaults/main.yml
@@ -36,6 +36,7 @@ ec2_infoblox_flavor_name: m6i.2xlarge #m5.large
 ec2_infoblox_keypair_name: "KeyPair-Virginia"
 ec2_infoblox_admin_pass: "admin123$%&"
 ec2_infoblox_user_data: |
+  #infoblox-config
   remote_console_enabled: y
   default_admin_password: {{ ec2_infoblox_admin_pass }}
   temp_license: enterprise dns dhcp cloud nios IB-V825
