--- a/roles/aws_infoblox_deploy/tasks/main.yml
+++ b/roles/aws_infoblox_deploy/tasks/main.yml
@@ -117,7 +117,7 @@
         device_index: 0
       - id: "{{ eni_srv.interface.id }}"
         device_index: 1
-    user_data: "{{ ec2_infoblox_user_data }}"
+    user_data: "{{ lookup('ansible.builtin.template', 'user_data.j2') }}"
     volumes: "{{ volumes }}"
     tags:
       Name: "{{ ec2_infoblox_instance_name }}"
