--- a/roles/aws_infoblox_deploy/defaults/main.yml
+++ b/roles/aws_infoblox_deploy/defaults/main.yml
@@ -32,7 +32,7 @@ ec2_sg_openports:
 ec2_infoblox_instance_name: infoblox-1
 ec2_infoblox_image_id: ami-0622a3d7a285429de
 ec2_infoblox_image_name: Infoblox NIOS 9.0.5(BYOL)-3d6f2259-6756-484c-ac5e-f2d9330afe95
-ec2_infoblox_flavor_name: m6i.2xlarge #m5.large
+ec2_infoblox_flavor_name: m5.large #m6i.2xlarge 
 ec2_infoblox_keypair_name: "KeyPair-Virginia"
 ec2_infoblox_admin_pass: "admin123$%&"
 volumes:
