--- a/aws_infoblox_config.yml
+++ b/aws_infoblox_config.yml
@@ -1,3 +1,13 @@
+---
+
+- name: Get dynamic nodes name from inventory and assign them to groups
+  hosts: localhost
+  connection: local
+  gather_facts: no
+  tasks:
+  - include_role: 
+      name: utils_hosts_aws
+
 - name: AWS Infoblox config
   hosts: localhost
   connection: local
