--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -12,6 +12,6 @@
     provider: "{{ provider }}"
     ip_address: "{{ lookup('infoblox.nios_modules.nios_next_ip', ip_network', 'provider'=provider) }}"
 
-- name: Next IP address from Network {{ ip_network }} is {{ ip_address }}
+- name: Next IP address
   debug:
     msg: "Next IP address from Network {{ ip_network }} is {{ ip_address }}"
