--- a/roles/aws_infoblox_config/defaults/main.yml
+++ b/roles/aws_infoblox_config/defaults/main.yml
@@ -5,5 +5,5 @@ provider:
   username: admin
   password: "admin123$%&"
 
-ip_container: 192.168.0.0/16
-ip_network: 192.168.10.0/24
+ipv4_container: 192.168.0.0/16
+ipv4_network: 192.168.10.0/24
