--- a/roles/aws_infoblox_config/tasks/main.yml
+++ b/roles/aws_infoblox_config/tasks/main.yml
@@ -1,12 +1,18 @@
 ---
 
-- name: Configure an IPv4 Network
+- name: Get existing IPv4 Networks
   infoblox.nios_modules.nios_network:
     provider: "{{ provider }}"
     network: "{{ ipv4_network }}"
     comment: "Network {{ ipv4_network }}"
     state: present
 
+- name: Configure an IPv4 Network
+  infoblox.nios_modules.nios_network:
+    provider: "{{ provider }}"
+    network: "{{ ipv4_network }}"
+    comment: "Network {{ ipv4_network }}"
+    state: present
 
 - name: Get Next IPv4 Address from Network {{ ip_network }}
   ansible.builtin.set_fact:
@@ -16,3 +22,10 @@
 - name: Get Next IPv6 Address
   debug:
     msg: "Next IP address from Network {{ ip_network }} is {{ ip_address }}"
+
+- name: Configure an IPv4 Network
+  infoblox.nios_modules.nios_network:
+    provider: "{{ provider }}"
+    network: "{{ ipv4_network }}"
+    comment: "Network {{ ipv4_network }}"
+    state: absent
